--- a/popup.html
+++ b/popup.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Work IT!</title>
+        <title>Let's Move</title>
         <script src="popup.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
+        <h2 id="header" style="margin: auto;"> Great choice! Let's get moving </h2>
 
-        <h2 id="header"> What exercise would you like to do? </h2>
-
-        <img id="character" style="width: 100px; float:left;" src="img/Character.png" alt="hot bandi">
+        <img id="character" style = "width:200px; margin: auto;" src="img/intro.gif">
         
-        <div style="float:left; width: 150px;">
-        <button id="imgClickAndChange"  style = "width:180px" class="button">
-            Sideways Stretch</button>
-        <button id="later" style = "width:180px" class="button">Torso Stretch</button>
-        <button id="later2" style = "width:180px; margin-bottom: 10px;" class="button">Neck Rotation</button>
-
+        <div id="body" style="text-align: center; margin: auto; width: 180px;">
+        <button id="imgClickAndChange"  style = "width:180px;" class="button"> Try a stretch </button>
+        <h2 id="timer" style = "margin: auto; margin-bottom: 20px;"> </h2>
         </div>
-        
+
     </body>
 </html>
